# Reinforcement-learning-for-Gradient-descent

./: .gitignore  README.md  pyproject.toml
code/: convex_function.py  main.py  optimization_methods.py
gymnasium/: README.md  pyproject.toml
gymnasium/convex_optimization_env/: __init__.py
gymnasium/convex_optimization_env/envs/: __init__.py  convex_optimization.py
gymnasium/convex_optimization_env/wrappers/: __init__.py
notebooks/: 2d_convex_2d_4.json  2d_convex_exps.ipynb  2d_convex_noise.json  2d_non_convex_exps.ipynb  Nd_convex_exps.ipynb  check_convex_rl_model.ipynb  convex_exps.ipynb  convex_function_with_noise.ipynb  neural_network.json  neural_network_optimization_epxs.ipynb  noise_exps.ipynb  optimizer_test.ipynb  tensorboard_graphics.ipynb
src/gymnasium_envs/: env_check.py
src/gymnasium_envs/convex_optimization_env/: __init__.py
src/gymnasium_envs/nn_optimization_env/: __init__.py
src/gymnasium_envs/non_convex_optimization_env/: __init__.py
src/model_training/: convex_model.ipynb  neural_network_model.ipynb
src/model_training/convex_model/: 2d_convex_model_train.py
src/model_training/nn_model/: lenet_mnist_optimization.py
src/model_training/non_convex_model/: 2d_convex_w_noise_model_train.py
src/nn_models/: lenet.py
src/optimization/: convex_function.py  convex_function_w_noise.py  custom_lr_optimizer.py  function.py  main.py  optimization_methods.py
src/optimization/optimization_functions/: convex_function.py  (+1 more)
src/rl_training/: convex_model_train.py
src/utils/: exps_utils.py  prng.py
utils/: sb3_env_check.py
(+22 files in other folders)
