[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gradient-descent-rl"
version = "0.1.0"
description = "Reinforcement Learning for Gradient Descent"
authors = [{name = "Defenser"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "gymnasium>=0.28.0",
    "numpy>=1.24.0",
    "stable-baselines3>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]